[package]
name = "mos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
nom = { version = "7.1.0", features = ["alloc"] }
nom-supreme = "0.6.0"
nom_locate = { path = "./vendor/nom_locate/" }
rustyline = "9.1.1"
